--- a/frontend/app/components/AccountOverview.module.css
+++ b/frontend/app/components/AccountOverview.module.css
@@ -116,3 +116,15 @@
     background-color: #B71C1C;
 }
 
+.show {
+    background-color: #D32F2F;
+    color: white;
+    border: none;
+    padding: 2px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+    transition: background-color 0.3s;
+    margin-left: 5px;
+}
+
